# Brainstormer

./: .gitignore  README.md  bing.py  key.txt  output.html  output2.txt  pyproject.toml  requirements.txt  webapp.py
libraries/: phrase.py  splitter.py
